--- a/task-3-css/style.css
+++ b/task-3-css/style.css
@@ -27,13 +27,16 @@ body{
   header{
     margin: 0 auto;
     margin-top:20px;
-    color:rgba(246, 15, 142,1.0);
+    color: black;
     /* color:#cdcaca; */
     text-align: center;
     width:90%;
     padding:0;
-    background:Cornflowerblue; 
-    font-size:18px;
+    background:rgb(255, 186, 224); 
+    font-size:30px;
+     font-family: "Pinyon Script", cursive;
+  font-weight: 400;
+  font-style: normal;
   }
   .flex-box{
     margin:0 auto;
@@ -71,10 +74,10 @@ body{
     border:2px;
     background:white;
     border-style:solid;
-    border-color: rgba(246, 15, 142,1.0);
+    border-color: rgb(203, 111, 249);
     background:white;
     cursor: pointer;
-    color: rgba(246, 15, 142,1.0);
+    color: rgb(129, 101, 243);
   }
 
   .team-nav{
@@ -91,9 +94,15 @@ body{
     margin:0;
     text-align:center;
     margin-top:10px;
-    background: rgb(63, 138, 243);
+    background: black;
+    border-color: white; 
     padding:10px;
     font-size: 18px;
+    width: 90vw; 
+
+  font-family: "Unna", serif;
+  font-weight: 400;
+  font-style: normal;
   }
 
   .aniCanvas{
@@ -101,15 +110,15 @@ body{
     background:white;
     border-style:solid;
     border-color: rgb(255, 255, 255);
-    width:500px;
-    height:500px;
+    width:90vw;
+    height:80vh;
     margin:0 auto;
     position:relative;
   }
 
   .active-button{
     color:white;
-    background:rgba(246, 15, 142,1.0);
+    background:rgb(218, 179, 255);
   }
 
 /*CSS TEAM H**/
